# ops-post

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: extending.md  getting-started.md  index.md
docs/reference/: architecture.md  element-registry.md  mpco-format.md  postdata-format.md
docs/user-guide/: controls.md  elements.md  results.md
extending/: index.html
getting-started/: index.html
reference/architecture/: index.html
reference/element-registry/: index.html
reference/mpco-format/: index.html
reference/postdata-format/: index.html
search/: search_index.json
src/ops_post/: __init__.py  __main__.py  gui.py  mesh_builder.py  model.py  mpco_reader.py  ops_elements.py  result_processor.py  tcl_parser.py  utils.py
src/ops_post.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
user-guide/controls/: index.html
user-guide/elements/: index.html
user-guide/results/: index.html
